deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weatherapi-service
  namespace: weather-project
spec:
  type: NodePort
  ports:
    - name: http
      targetPort: 8080
      port: 80
      nodePort: 32668
  selector:
    app: weatherapi
