deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherapi-ingress
  namespace: weather-project
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 250m

    #ingress.kubernetes.io/force-ssl-redirect: 'true'
    #ingress.kubernetes.io/ssl-redirect: 'true'
    #nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    #nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    #kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: weathet.api
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weatherapi-service
                port:
                  number: 80
